yaml/share-env-app-trace/base/a.yaml
apiVersion: v1
kind: Service
metadata:
  name: a
  namespace: base-env-dev
  labels:
    app: a
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: a

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: a
  namespace: base-env-dev
  labels:
    app: a
    version: base
spec:
  selector:
    matchLabels:
      app: a
      version: base
  replicas: 1
  template:
    metadata:
      labels:
        app: a
        version: base
    spec:
      containers:
      - name: nginx
        image: ccr.ccs.tencentyun.com/flyer103/myapp-1:6318d09__linux_amd64
        imagePullPolicy: Always
        command: ["/myapp-1"]
        args: ["--downstream-addr", "$(DOWNSTREAM_ADDR)", "--headers", "$(HEADERS)"]
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
