yaml/share-env-app-trace/base/vs-a.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: a
  namespace: base-env-dev
spec:
  hosts:
  - a
  http:
  - match:
    - headers:
        x-env:
          exact: dev1
    route:
    - destination:
        host: a.dev1-env-dev.svc.cluster.local
  - route:
    - destination:
        host: a.base-env-dev.svc.cluster.local
