yaml/share-env-app-trace/base/vs-c.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: c
  namespace: base-env-dev
spec:
  hosts:
  - c
  http:
  - match:
    - headers:
        x-env:
          exact: dev1
    route:
    - destination:
        host: c.dev1-env-dev.svc.cluster.local
  - match:
    - headers:
        x-env:
          exact: dev2
    route:
    - destination:
        host: c.dev2-env-dev.svc.cluster.local
  - route:
    - destination:
        host: c.base-env-dev.svc.cluster.local
